@@ -73,3 +73,12 @@ HORAS TRABALHADAS: 4h
 - bugfixes
 
 HORAS TRABALHADAS: 7h
+
+==========
+11/06/2009
+==========
+
+- inclusao de botao excluir item do queue
+- bugfixes
+
+HORAS TRABALHADAS: 2h
